--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -6,8 +6,7 @@ project:
         api_version: '42.0'
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/Cumulus'
-        - namespace: outfunds 
-          version: 1.13 
+        - github: 'https://github.com/SalesforceFoundation/OutboundFunds'
 
 
 
