--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -2,7 +2,7 @@ project:
     name: OutboundFundsNPSP
     package:
         name:  Outbound Funds (npsp)
-        namespace: outfundsnpspext
+        namespace: outfundsnpsp
         api_version: '42.0'
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/Cumulus'
