--- a/src/package.xml
+++ b/src/package.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <fullName>Outbound Funds %28npsp%29</fullName>
+    <apiAccessLevel>Unrestricted</apiAccessLevel>
+    <description>Extension package to connect Outbound Funds to the NPSP.</description>
+    <namespacePrefix>outfundsnpspext</namespacePrefix>
     <types>
-        <members>GAU_Expendature__c.GAU_Expendature_Compact_Layout</members>
+        <members>GAU_Expenditure__c.GAU_Expenditure_Compact_Layout</members>
         <name>CompactLayout</name>
     </types>
     <types>
-        <members>GAU_Expendature__c.Amount__c</members>
-        <members>GAU_Expendature__c.Disbursement__c</members>
-        <members>GAU_Expendature__c.General_Accounting_Unit__c</members>
+        <members>GAU_Expenditure__c.Amount__c</members>
+        <members>GAU_Expenditure__c.Disbursement__c</members>
+        <members>GAU_Expenditure__c.General_Accounting_Unit__c</members>
         <members>npsp__General_Accounting_Unit__c.Amount_Available__c</members>
         <members>npsp__General_Accounting_Unit__c.First_Disbursement_Date__c</members>
         <members>npsp__General_Accounting_Unit__c.Largest_Disbursement__c</members>
@@ -19,19 +22,19 @@
         <name>CustomField</name>
     </types>
     <types>
-        <members>GAU_Expendature__c</members>
+        <members>GAU_Expenditure__c</members>
         <name>CustomObject</name>
     </types>
     <types>
         <members>Disbursement_NPSP_Record</members>
-        <members>GAU_Expendature_Record_Page</members>
-        <members>GAU_Record_Page</members>
+        <members>GAU_Expenditure_Record_Page</members>
+        <members>GAU_Outbound_Funds_Record_Page</members>
         <name>FlexiPage</name>
     </types>
     <types>
-        <members>GAU_Expendature__c-GAU Expendature Layout</members>
-        <members>npsp__General_Accounting_Unit__c-GAU w%2FDisbursement Layout</members>
-        <members>outfunds__Disbursement__c-Disbursement w%2FExpendatures Layout</members>
+        <members>GAU_Expenditure__c-GAU Expenditure Layout</members>
+        <members>npsp__General_Accounting_Unit__c-GAU Outbound Funds Layout</members>
+        <members>outfunds__Disbursement__c-Disbursement NPSP Layout</members>
         <name>Layout</name>
     </types>
     <version>42.0</version>
