add gau lookup component with controller and test

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,1 +1,1 @@
-{"sourceApiVersion": "47.0", "packageDirectories": [{"default": true, "path": "force-app"}], "namespace": "outfundsnpspext"}
+{"sourceApiVersion": "47.0", "packageDirectories": [{"default": true, "path": "src"}], "namespace": "outfundsnpspext"}
