--- a/src/package.xml
+++ b/src/package.xml
@@ -36,7 +36,14 @@
     </types>
     <types>
       <members>LookupSearchResult</members>
+      <members>LookupController</members>
+      <members>LookupControllerTest</members>
       <name>ApexClass</name>
+    </types>
+    <types>
+      <members>lookup</members>
+      <members>gauExpenditureRow</members>
+      <name>LightningComponentBundle</name>
     </types>
     <version>47.0</version>
 </Package>
