add static header

--- a/src/lwc/jsconfig.json
+++ b/src/lwc/jsconfig.json
@@ -8,6 +8,12 @@
             ],
             "c/lookup": [
                 "lookup/lookup.js"
+            ],
+            "c/manageExpenditures": [
+                "manageExpenditures/manageExpenditures.js"
+            ],
+            "c/manageExpendituresHeader": [
+                "manageExpendituresHeader/manageExpendituresHeader.js"
             ]
         }
     },
