--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -7,6 +7,7 @@ project:
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/Cumulus'
         - github: 'https://github.com/SalesforceFoundation/OutboundFunds'
+    source_format: sfdx
 
 
 
