--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -17,6 +17,9 @@
             ],
             "c/manageExpendituresTableHeader": [
                 "manageExpendituresTableHeader/manageExpendituresTableHeader.js"
+            ],
+            "c/recordPagePoc": [
+                "recordPagePoc/recordPagePoc.js"
             ]
         }
     },
