error handling and edge case handling

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -20,6 +20,9 @@
             ],
             "c/recordPagePoc": [
                 "recordPagePoc/recordPagePoc.js"
+            ],
+            "c/warningBanner": [
+                "warningBanner/warningBanner.js"
             ]
         }
     },
