gauExpenditureRow comments & cleanup

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -21,6 +21,9 @@
             "c/recordPagePoc": [
                 "recordPagePoc/recordPagePoc.js"
             ],
+            "c/testComposition": [
+                "testComposition/testComposition.js"
+            ],
             "c/warningBanner": [
                 "warningBanner/warningBanner.js"
             ]
