Add Robot boilerplate

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -19,3 +19,15 @@ orgs:
             config_file: orgs/prerelease.json
         beta_prerelease:
             config_file: orgs/beta_prerelease.json
+
+tasks:
+    robot:
+        options:
+            suites: robot/OutboundFundsNPSP/tests
+            options:
+                outputdir: robot/OutboundFundsNPSP/results
+
+    robot_testdoc:
+        options:
+            path: robot/OutboundFundsNPSP/tests
+            output: robot/OutboundFundsNPSP/doc/OutboundFundsNPSP_tests.html
