--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,14 @@
 .DS_Store
 .appcloud
+.cci
 .externalToolBuilders
 .project
 .settings
-build.properties
-salesforce.schema
-Referenced Packages
-/destructiveChanges.xml
-/admin_profile
-/browser_tests
-/uninstall
-/uninstallsrc
-/installdeploy
-/installedPackages
 /org_unpackaged
-/src.orig
-/unpackaged/*/*/*.zip
-/unpackaged/namespaced_zipped
-/unpackaged/zipped
-/unpackaged_stage
-/packaged
+/src.org
 /test_results.json
 /test_results.xml
 /test_results_junit.xml
-/venv
 .*.swp
 *.pyc
 *.sublime-project
@@ -31,19 +16,12 @@ Referenced Packages
 **/.sfdx/
 **/.vscode/
 **/.idea/
-/config/
 log.html
 output.xml
 report.html
-*.png
-testdata/dev_org/test_data.db
-*.db
-*.db
-testdata/dev_org/test_data.db
-.pmdCache
-.localdevserver
+selenium-screenshot*.png
 .cci
-node_modules/
-package-lock.json
-package.json
-.prettierrc
+node_modules
+.python_hash
+.node_hash
+venv
