--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -1,12 +1,12 @@
 project:
     name: OutboundFundsNPSP
     package:
-        name:  Outbound Funds (npsp)
+        name: Outbound Funds (npsp)
         namespace: outfundsnpspext
-        api_version: '47.0'
+        api_version: "47.0"
     dependencies:
-        - github: 'https://github.com/SalesforceFoundation/NPSP'
-        - github: 'https://github.com/SFDO-Community/OutboundFunds'
+        - github: "https://github.com/SalesforceFoundation/NPSP"
+        - github: "https://github.com/SFDO-Community/OutboundFunds"
     source_format: sfdx
 
 orgs:
