--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -3,30 +3,17 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
-            "c/gauExpenditureRow": [
-                "gauExpenditureRow/gauExpenditureRow.js"
-            ],
-            "c/lookup": [
-                "lookup/lookup.js"
-            ],
-            "c/manageExpenditures": [
-                "manageExpenditures/manageExpenditures.js"
-            ],
+            "c/gauExpenditureRow": ["gauExpenditureRow/gauExpenditureRow.js"],
+            "c/lookup": ["lookup/lookup.js"],
+            "c/manageExpenditures": ["manageExpenditures/manageExpenditures.js"],
             "c/manageExpendituresTableHeader": [
                 "manageExpendituresTableHeader/manageExpendituresTableHeader.js"
             ],
-            "c/warningBanner": [
-                "warningBanner/warningBanner.js"
-            ]
+            "c/warningBanner": ["warningBanner/warningBanner.js"]
         }
     },
-    "include": [
-        "**/*",
-        "../../../../.sfdx/typings/lwc/**/*.d.ts"
-    ],
+    "include": ["**/*", "../../../../.sfdx/typings/lwc/**/*.d.ts"],
     "typeAcquisition": {
-        "include": [
-            "jest"
-        ]
+        "include": ["jest"]
     }
 }
