--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@lwc/jest-preset": "^7.0.0",
     "@sa11y/jest": "^0.2.0",
     "@salesforce/eslint-config-lwc": "^0.6.0",
-    "@salesforce/lwc-jest": "^0.6.2",
     "@salesforce/sfdx-lwc-jest": "^0.11.0",
     "babel-eslint": "^10.1.0",
     "cspell": "^4.0.63",
@@ -55,5 +54,8 @@
     "yarn.lock": [
       "lockfile-lint"
     ]
+  },
+  "dependencies": {
+    "js-yaml": "^3.13.1"
   }
 }
