--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,3 +4,7 @@
 # CumulusCI
 /cumulusci.yml        @SalesforceFoundation/release-engineering-reviewers
 /tasks/               @SalesforceFoundation/release-engineering-reviewers
+
+# GitHub Actions
+.github/workflows/**  @SalesforceFoundation/release-engineering-reviewers
+package.json          @SalesforceFoundation/release-engineering-reviewers
