Reverting Robot test commits
Reverting changes in commits
- 52d72b583a0f46cc2d265da553500f794a4b8007
- bbe8360d5317f32dd26c04ae6b2879acb36f2770

Changes will be introduced in a separate commit(s).

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -29,8 +29,8 @@ tasks:
 
     robot_testdoc:
         options:
-            path: robot/OutboundFundsNPSP/resources/OutboundFundsNPSP.py,robot/OutboundFundsNPSP/resources/OutboundFundsNPSP.robot,robot/OutboundFundsNPSP/resources/*PageObject.py
-                output: robot/OutboundFundsNPSP/doc/Keywords.html
+            path: robot/OutboundFundsNPSP/tests
+            output: robot/OutboundFundsNPSP/doc/OutboundFundsNPSP_tests.html
 
     load_storytelling_data:
         class_path: cumulusci.tasks.bulkdata.LoadData
