Automerge Major Release Branches
- Removed unintended local file changes

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -2,7 +2,7 @@ project:
     name: OutboundFundsNPSP
     package:
         name: Outbound Funds (npsp)
-        namespace: lh6uuas
+        namespace: outfundsnpspext
         api_version: "50.0"
     dependencies:
         - github: "https://github.com/SalesforceFoundation/NPSP"
@@ -54,23 +54,6 @@ tasks:
             sql_path: datasets/data.sql
 
 flows:
-    dependencies:
-        steps:
-            1:
-                task: update_dependencies
-                options:
-                    include_beta: False
-
-    install_2gp_commit:
-        steps:
-            2:
-                flow: dependencies
-                options:
-                    update_dependencies:
-                        include_beta: False
-                        dependencies: ^^github_package_data.dependencies
-                        prefer_2gp_from_release_branch: True
-
     config_dev:
         steps:
             3:
