Enforce LWC Jest code coverage
- Enforces 100% LWC Jest code coverage among all measures except for the following block list:
    - `gauExpenditureRow`
    - `lookup`
    - `manageExpenditures`
    - `manageExpendituresTableHeader`
- We needed at least one test at 100% code coverage, so fully tested warningBanner.
    - For a11y, needed to change to only render `<h2>{message}</h2>` if there is a message.  Else, empty headers is not allowed.
    - warningBanner does not yet support translations.  Exported English labels so test can assert the proper labels are used.
- Updated `package.json` name to follow proper naming convention.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OutboundFundsNPSP",
+  "name": "outboundfundsmodulenpsp",
   "license": "UNLICENSED",
   "author": "Salesforce.org Impact Engineering",
   "devDependencies": {
