Updated/Added CODEOWNERS with ECCN

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,3 +8,4 @@
 # GitHub Actions
 .github/workflows/**  @SalesforceFoundation/release-engineering-reviewers
 package.json          @SalesforceFoundation/release-engineering-reviewers
+#ECCN:Open Source
