--- a/package.json
+++ b/package.json
@@ -3,28 +3,27 @@
   "license": "UNLICENSED",
   "author": "Salesforce.org Impact Engineering",
   "devDependencies": {
-    "@lwc/eslint-plugin-lwc": "^0.10.0",
-    "@lwc/jest-preset": "^7.0.0",
-    "@sa11y/jest": "^0.2.0",
-    "@salesforce/eslint-config-lwc": "^0.6.0",
-    "@salesforce/sfdx-lwc-jest": "^0.11.0",
-    "babel-eslint": "^10.1.0",
-    "cspell": "^4.0.63",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7",
+    "@lwc/eslint-plugin-lwc": "^1.0.0",
+    "@sa11y/jest": "^3.1.0",
+    "@salesforce/eslint-config-lwc": "^3.2.0",
+    "@salesforce/eslint-plugin-lightning": "^1.0.0",
+    "@salesforce/sfdx-lwc-jest": "^1.1.0",
+    "cspell": "^5.13.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "hasha-cli": "^4.1.0",
-    "husky": "^4.2.5",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.2.9",
-    "lockfile-lint": "^4.3.6",
-    "prettier": "^2.2.1",
-    "prettier-plugin-apex": "^1.7.0"
-  },
-  "resolutions": {
-    "js-yaml": "^3.13.1",
-    "axios": "^0.21.1",
-    "node-notifier": "^8.0.1"
+    "husky": "^4",
+    "jest": "^27.3.1",
+    "lint-staged": "^12.1.2",
+    "lockfile-lint": "^4.6.2",
+    "prettier": "^2.4.1",
+    "prettier-plugin-apex": "^1.10.0",
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "test:unit": "lwc-jest",
@@ -54,8 +53,5 @@
     "yarn.lock": [
       "lockfile-lint"
     ]
-  },
-  "dependencies": {
-    "js-yaml": "^3.13.1"
   }
 }
