--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "prettier-plugin-apex": "^1.10.0",
     "typescript": "^4.5.2"
   },
+  "resolutions": {
+    "nth-check": "^2.0.1",
+    "trim-newlines": "^3.0.1"
+  },
   "scripts": {
     "test:unit": "lwc-jest",
     "test:unit:coverage": "lwc-jest --coverage",
