--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -32,6 +32,15 @@ tasks:
         options:
             update_future_releases: True
 
+    # Require Apex Code Coverage
+    run_tests:
+        options:
+            retry_failures:
+                - "unable to obtain exclusive access to this record"
+                - "UNABLE_TO_LOCK_ROW"
+            retry_always: True
+            required_per_class_code_coverage_percent: "95"
+
     robot:
         options:
             suites: robot/OutboundFundsNPSP/tests
