--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@sa11y/jest": "^3.1.0",
     "@salesforce/eslint-config-lwc": "^3.2.0",
     "@salesforce/eslint-plugin-lightning": "^1.0.0",
-    "@salesforce/sfdx-lwc-jest": "^0.12.6",
+    "@salesforce/sfdx-lwc-jest": "^0.14.0",
     "cspell": "^5.13.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
@@ -26,8 +26,7 @@
     "typescript": "^4.5.2"
   },
   "resolutions": {
-    "nth-check": "^2.0.1",
-    "trim-newlines": "^3.0.1"
+    "yargs-parser": "^20.2.2"
   },
   "scripts": {
     "test:unit": "lwc-jest",
