update runners for several builds

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,7 +2,7 @@ name: Linting
 on: [push]
 jobs:
   eslint:
-    runs-on: ubuntu-latest
+    runs-on: SalesforceFoundation-ubuntu
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v2-beta
