--- a/.github/workflows/lockfile-lint.yml
+++ b/.github/workflows/lockfile-lint.yml
@@ -2,7 +2,7 @@ name: Lockfile
 on: [push]
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: SalesforceFoundation-ubuntu
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v2-beta
