--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 #ECCN: Open Source
-#GUSINFO: Program Management Orion, SFDO Outbound Funds Module
+#GUSINFO: NPC Orion, SFDO Outbound Funds Module
 # 
 # Copyright (c) 2021, salesforce.com, inc.
 # All rights reserved.
