--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -2,7 +2,7 @@ name: Jest
 on: [push]
 jobs:
   jest:
-    runs-on: ubuntu-latest
+    runs-on: SalesforceFoundation-ubuntu
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v2-beta
