--- a/.github/workflows/label_audit.yml
+++ b/.github/workflows/label_audit.yml
@@ -2,7 +2,7 @@ name: Label Audit
 on: [push]
 jobs:
   labels:
-    runs-on: ubuntu-latest
+    runs-on: SalesforceFoundation-ubuntu
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
